# IEP

./: README.md
Laborator8/: Makefile  item11.c  item11.ko  item11.mod  item11.mod.c  modules.order
Laborator8/Exemplu/: Makefile  exemplu.c  exemplu.ko  exemplu.mod  exemplu.mod.c  modules.order
TemaIEP/: CMakeLists.txt
TemaIEP/inc/: header.h
TemaIEP/src/: function.cpp  main.cpp
TemaLab4/: Source.cpp
TemaLaborator10/: Source.cpp
TemaLaborator11/: Source.cpp
TemaLaborator5/: Tema_item11.cpp  item71012.cpp
TemaLaborator6/: Item13.cpp  Item14.cpp
TemaLaborator7/: Item18.cpp  Item22,24,25.cpp
TemaLaborator9/: Makefile  imx6sx-sdb.dts  modules.order  tema.c  tema.ko  tema.mod  tema.mod.c
